@@ -31,7 +31,7 @@
 #define LIBCSOUP_VERSION(x,y,z)	(((x)<<24)|((y)<<12)|(z))
 #define LIBCSOUP_VER_MAJOR	0		/* 0-255 */
 #define LIBCSOUP_VER_MINOR	8		/* 0-4095 */
-#define LIBCSOUP_VER_BUGFIX	11		/* 0-4095 */
+#define LIBCSOUP_VER_BUGFIX	12		/* 0-4095 */
 
 
 /*****************************************************************************
@@ -418,6 +418,11 @@ int csc_cmp_file_extname(char *fname, char *ext);
 int csc_cmp_file_extlist(char *fname, char **ext);
 int csc_cmp_file_extargs(char *fname, char *ext, ...);
 
+/* see csc_strbival.c */
+int csc_strbival_int(char *s, char *delim, int *opt);
+long csc_strbival_long(char *s, char *delim, long *opt);
+
+/* see csc_strbody.c */
 char *csc_strbody(char *s, int *len);
 
 /* see csoup_strcmp_list.c */
