@@ -1,3 +1,6 @@
+20160610: 0.8.12:
+	* csc_strbival.c: added to grab two integers from string like "100x20"
+	
 20160602: 0.8.11:
 	* csc_cli_print.c: trimmed the output effect of the optional
 	parameters, from "--help [ARGS]" to "--help=[OPTS]"
